--- a/make/Makefile.git_gen
+++ b/make/Makefile.git_gen
@@ -32,8 +32,6 @@ tag_gen:
 	@git pull
 	@git tag -a $(TAG_NAME) -m "$(COMMIT_MSG)"
 	@git push --tags
-	@git tag -l $(TAG_NAME)
-	@git ls-remote --tags origin
 
 tag_log:
 	@git ls-remote --tags origin
@@ -42,13 +40,10 @@ tag_log:
 tag_del:
 	@git tag -d $(TAG_NAME)
 	@git push origin --delete $(TAG_NAME)
-	@git ls-remote --tags origin
-	@git tag -l "mc8860*"
 
 #---------- 全仓库统一切换 TAG ----------
 repo_update_tag:
 	@repo forall -c "git fetch --all"
-	@cd mc40 && git tag
 	@repo forall -c "git checkout ANY_TAG_NAME"
 
 #---------- 强制同步并加载指定 TAG ----------
@@ -60,9 +55,44 @@ repo_load_tag:
 		git pull"
 
 #---------- 生成 TAG 列表 Excel ----------
+CSV_FILE_PATH    := /output/panweihao
 TAG_GEN_LIST_CSV := mc8860.5rtl_tag_list.csv
 
-git_gen_xlsx_handle:
-	@chmod +x ./git_gen.sh
-	#文件为.csv文件，仅包：含库，TAG名；库数量为38
-	@bash ./get_git_tags.csh $(TAG_GEN_LIST_CSV) 38
+git_gen_tag_download:
+ifeq (,$(wildcard ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))))
+	@mkdir -p ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))
+endif
+	@cp $(CSV_FILE_PATH)/$(TAG_GEN_LIST_CSV) $(PROJ_DIR)/./asic_tool/Tagging/tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/$(TAG_GEN_LIST_CSV)
+	@dos2unix ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/$(TAG_GEN_LIST_CSV)
+	@dos2unix ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/$(TAG_GEN_LIST_CSV)
+	@dos2unix ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/$(TAG_GEN_LIST_CSV)
+	@chmod +x ./get_git_tags.csh
+	@./get_git_tags.csh ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/$(TAG_GEN_LIST_CSV) $(TAG_GEN_LIST_CSV) $(TAG_NUM)
+
+# 检查Git标签
+git_gen_tag_check:
+	rm -rf ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/repo_sts.check.log
+	rm -rf ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/tag.list
+	@bssh -S -q urgent /tools/open/git-repo/repo forall -c "pwd; git status" > ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/repo_sts.check.log
+	@grep "HEAD detached" ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/repo_sts.check.log > ./tag_list/$(patsubst %.csv,%,$(TAG_GEN_LIST_CSV))/tag.list
+
+help：
+	echo "=============================="
+	echo "Help Script for Git Tag Operations"
+	echo "=============================="
+	# step1: 执行Makefile以下载Git标签
+	echo "step1: Download Git tags using Makefile"
+	echo "make -f Makefile.git_gen git_gen_tag_download TAG_GEN_LIST_CSV=mc8860_0.5rtl_tag_list.csv TAG_NUM=39"
+	# 提示用户继续下一步
+	echo "If MAKE TAG DONE is printed, proceed to step2 or step3"
+	echo "run: make -f Makefile.git_gen git_gen_tag_check TAG_GEN_LIST_CSV=mc8860_0.5rtl_tag_list.csv"
+	# step2: 创建并推送Git标签
+	echo "=============================="
+	echo "step2: Create and push Git tags"
+	echo "# repo tag='bsub -Is -q urgent /tools/open/git-repo/repo forall -c \"git tag -a -m \\\"1:2 \\\"1; git push --tags\"'"
+	echo "repo tag <TAG_NAME> <'commit'>"
+	echo "=============================="
+	echo "step3: Sync and update Git repositories"
+	echo "repo sync --force-sync"
+	echo "repo forall -c \"git fetch --all; git checkout <TAG_NAME>; git pull\""
+	echo "=============================="
